apps/base/home-assistant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: home-assistant
    labels:
        toolkit.fluxcd.io/tenant: sys
