apps/base/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: home-assistant
    namespace: home-assistant
spec:
    selector:
        matchLabels:
            app: home-assistant
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: home-assistant
        spec:
            securityContext:
                fsGroup: 1000
                supplementalGroups:
                    - 27 # dialout group for ttyUSB0
                seccompProfile:
                    type: RuntimeDefault

            containers:
                - name: home-assistant
                  image: ghcr.io/11notes/homeassistant:2026.9
                  imagePullPolicy: Always
                  securityContext:
                      runAsUser: 1000
                      runAsGroup: 1000
                      runAsNonRoot: true
                      allowPrivilegeEscalation: false
                      readOnlyRootFilesystem: true
                      capabilities:
                          drop: ["ALL"]
                  livenessProbe:
                      tcpSocket:
                          port: 8123
                      initialDelaySeconds: 0
                      failureThreshold: 3
                      timeoutSeconds: 1
                      periodSeconds: 10
                  readinessProbe:
                      tcpSocket:
                          port: 8123
                      initialDelaySeconds: 0
                      failureThreshold: 3
                      timeoutSeconds: 1
                      periodSeconds: 10
                  startupProbe:
                      tcpSocket:
                          port: 8123
                      initialDelaySeconds: 0
                      failureThreshold: 30
                      timeoutSeconds: 1
                      periodSeconds: 5
                  resources:
                      limits:
                          cpu: "0.5"
                          memory: "512Mi"
                          devic.es/zigbee: 1
                      requests:
                          cpu: "0.25"
                          memory: "256Mi"
                  ports:
                      - name: webui
                        containerPort: 8123
                        protocol: TCP
                  volumeMounts:
                      - name: config
                        mountPath: "/homeassistant/etc"
                      - name: var
                        mountPath: "/homeassistant/var"
                      - name: tmp
                        mountPath: "/homeassistant/tmp"

            volumes:
                - name: config
                  hostPath:
                      path: "/mnt/SSD/app-storage/home-assistant"
                      type: Directory
                - name: var
                  persistentVolumeClaim:
                      claimName: home-assistant-var
                - name: tmp
                  emptyDir:
                      medium: Memory
                      sizeLimit: 256Mi
