apps/base/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: home-assistant
    namespace: home-assistant
spec:
    type: ClusterIP
    selector:
        app: home-assistant
    ports:
        - name: webui
          port: 8123
          protocol: TCP
