apps/base/home-assistant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: home-assistant-ingress
    namespace: home-assistant
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`hass.guibi.dev`)
          kind: Rule
          services:
              - name: home-assistant
                namespace: home-assistant
                port: 8123
                scheme: http
    tls:
        secretName: tls-certificate
